# yidam

./: Cargo.toml  README.md
src/: 404.html  iframe.html  index copy.html  index.html  index.txt  main.rs
src copy/: index.html  main.rs
src copy 2/: index.html  main.rs
src/_next/static/chunks/: 84.8cd3a6cf3e8565b7.js  main-app-102a7bfca7a5ebcd.js  webpack-4799b807418fa27d.js
src/_next/static/chunks/app/: layout-1900e0f68aa6fe26.js  page-aa1461906bc3672c.js
src/_next/static/css/: f4fdd42e05bb1f76.css
src/web/: 404.html  index.html  index.txt
src/web/_next/static/chunks/: 517-89a82f1dd22f7158.js  main-4821244b93eb2f1c.js  main-app-92f64e20cd38f9f6.js  webpack-024562576a5c6961.js  webpack-8de05a501411cfbd.js
src/web/_next/static/chunks/app/: layout-e222a96499fdbe7b.js  page-364b7c3c94f6f399.js  page-89d879c5cf2bcc37.js  page-d15de3aa52bef23b.js
src/web/_next/static/css/: 94e1062805cfba89.css
