[package]
name = "yidam"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
axum = {version = "0.7", features = ["ws"]}
futures = "0.3"
tower-http = { version = "0.5", features = ["fs"] }